# Shadecc

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  setup.py
shadecc/: bin.py  build.py  cli.py  metal.py  preprocessor.py  spirv_wrapper.py  template.py  utils.py
shadecc/include/: Shadecc.hpp
shadecc/libs/Darwin/: libspirv_wrapper.dylib
shadecc/templates/: header.hpp  source.cpp  uniform_block.cpp  uniform_block_members.cpp
spirv_wrapper/: main.cpp  spirv_wrapper.cpp  spirv_wrapper.hpp
test/: CMakeLists.txt  main.cpp
test/glsl/: test_fs.glsl  test_vs.glsl
test/glsl/texture/: basic_texture_fs.glsl
